# trading_bitcoin

./: .gitignore  README.md  pyproject.toml
models/: test_model.pth
scratch_scripts/: test_torch.py  test_torch_2.py  test_use_neural_network.py  test_windowing.py
src/: create_neural_network.py  feature_engineering.py
